Implement custom test discovery and selection in MainTmt entry point